--- a/style.css
+++ b/style.css
@@ -43,11 +43,26 @@ button,
 	border-radius: 5px;
 	border: none;
 	font-size: 1rem;
+	background-color: #1b74ff;
+	color: #ffffff;
+	box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.25);
 }
 
 button:hover {
-	opacity: 80%;
+	opacity: 95%;
+	background-color: #094ca6;
 }
+
+button:disabled {
+	padding: 0.8rem 1.5rem;
+	margin: 1rem 0;
+	border-radius: 5px;
+	/* border: 3px solid blue; */
+	font-size: 1rem;
+	background-color: rgba(255, 255, 255, 0.521);
+	color: gray;
+	box-shadow: none;
+  }
 
 /* form */
 form {
